# Web-based-File-Manager

./: .gitignore  Cargo.toml  LICENSE  Readme.md
src/: auth.rs  bodies.rs  file_browser.rs  handlers.rs  lib.rs  main.rs  performance.rs  resumable_upload.rs  upload.rs  utils.rs
src/handlers/: auth_handlers.rs  file_handlers.rs  mod.rs  upload_handlers.rs  utils.rs
