[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.0", features = ["full", "fs"] }
futures = "0.3"
mime_guess = "2.0"
percent-encoding = "2.3"
http-body = "1.0.1"
dirs = "5.0"